Missing Icons updated

--- a/index.html
+++ b/index.html
@@ -1306,14 +1306,15 @@
         </li>
         <li>
           <a class="card" href="https://www.postman.com/" target="_blank">
-            <img src="https://www.postman.com/assets/logos/postman-logo-icon.svg">
+            <img src="./images/icons/postman.png">
             Postman
           </a>
           <span class="tooltip">Outil de test d'API</span>
         </li>
+                </li>
         <li>
           <a class="card" href="https://prettier.io/" target="_blank">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/prettier/prettier-original.svg">
+            <img src="./images/icons/prettier.png">
             Prettier
           </a>
           <span class="tooltip">Formateur de code automatique</span>
@@ -1395,7 +1396,7 @@
             </li>
             <li>
               <a class="card" href="https://you.com/" target="_blank">
-                <img src="https://you.com/favicon.ico">
+                <img src="./images/icons/you.png">
                 You.com
               </a>
               <span class="tooltip">Moteur de recherche IA personnalisé</span>
@@ -1424,7 +1425,7 @@
             </li>
             <li>
               <a class="card" href="https://www.midjourney.com/" target="_blank">
-                <img src="https://cdn.midjourney.com/favicon-32x32.png">
+                <img src="./images/icons/midjourney.svg">
                 Midjourney
               </a>
               <span class="tooltip">Génération d'images artistiques</span>
@@ -1438,7 +1439,7 @@
             </li>
             <li>
               <a class="card" href="https://firefly.adobe.com/" target="_blank">
-                <img src="https://firefly.adobe.com/favicon.ico">
+                <img src="./images/icons/firefly.png">
                 Adobe Firefly
               </a>
               <span class="tooltip">IA générative d'Adobe</span>
@@ -1481,7 +1482,7 @@
             </li>
             <li>
               <a class="card" href="https://www.wolfram.com/language/" target="_blank">
-                <img src="https://www.wolframalpha.com/favicon.ico">
+                <img src="./images/icons/wolfram.png">
                 Wolfram Alpha
               </a>
               <span class="tooltip">Moteur de calculs avancés</span>
@@ -1517,7 +1518,7 @@
             </li>
             <li>
               <a class="card" href="https://runwayml.com/" target="_blank">
-                <img src="https://runwayml.com/favicon.ico">
+                <img src="./images/icons/runwayml.ico">
                 Runway
               </a>
               <span class="tooltip">Suite créative IA pour vidéos</span>
@@ -1560,7 +1561,7 @@
             </li>
             <li>
               <a class="card" href="https://ollama.ai/" target="_blank">
-                <img src="https://ollama.com/favicon.ico">
+                <img src="./images/icons/ollama.png">
                 Ollama
               </a>
               <span class="tooltip">Exécution locale de LLMs</span>
